# catch-me-if-u-can

./: .gitignore  PROGRESS.md  README.md  compare_runs.py  comparison_report.html  eval.py  eval_all_runs.py  eval_continuous.py  play_live.py  pyproject.toml  train.py  train_continuous.py
envs/: catch_env.py  continuous_action_wrapper.py  player_bot.py
game/: character.py  renderer.py
runs/200K-experiment/: config.json
runs/bold_explorer/: config.json
runs/bold_explorer-300k/: config.json
runs/bold_explorer-lr-2e-4/: config.json
runs/bold_explorer-seed-142/: config.json
runs/bold_refined-v1/: config.json
runs/bold_refined-v2/: config.json
runs/bold_refined-v2-400K/: config.json
runs/bold_refined-v2-500K/: config.json
runs/bold_refined-v2-600K/: config.json
runs/bold_refined-v2-b1024/: config.json
runs/edge_fix/: config.json
runs/new-experiement/: config.json
runs/ppo_catchme_explore/: config.json
runs/ppo_catchme_stable/: config.json
runs/quick_learner/: config.json
runs/recreate_old_1m/: config.json
runs/steady_finisher-200K/: config.json
runs/steady_finisher-200K-b512/: config.json
runs/ultimate-run-2M-seed142/: config.json
runs/ultimate-run-2M-stable/: config.json
runs/ultimate-run-enhanced-v1/: config.json
runs/ultimate_run-1M/: config.json
runs/ultimate_run-2M-from-1M/: config.json
runs/ultimate_run_1m_resume_v1/: config.json
runs/ultimate_run_1m_resume_v2/: config.json
runs/ultimate_run_1m_resume_v3/: config.json
runs/ultimate_run_1m_resume_v3_95push/: config.json
vision/: camera.py  hand_tracker.py
(+45 files in other folders)
