[project]
name = "catch-me-if-you-can"
version = "0.1.0"
description = "Webcam hand tracking with OpenCV, MediaPipe Hands, and Gymnasium custom RL environment"
requires-python = ">=3.10"

dependencies = [
    "opencv-python",
    "numpy==1.26.4",
    "mediapipe==0.10.21",
    "gymnasium",
    "torch==2.5.1",
    "stable-baselines3[extra]",
    "pygame>=2.5.2",
    "matplotlib",
    "pandas"
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true 